--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-native": "0.73.2",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-email": "^2.1.0",
     "react-native-error-boundary": "^1.2.4",
