--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.1.0",
+    "app-icon": "^0.13.2",
+    "cross-env": "^7.0.3",
     "date-fns": "^3.3.1",
     "expo": "~50.0.3",
     "expo-auth-session": "~5.4.0",
@@ -46,6 +48,7 @@
     "expo-build-properties": "~0.11.0",
     "expo-camera": "~14.0.2",
     "expo-crypto": "~12.8.0",
+    "expo-dev-client": "~3.3.8",
     "expo-device": "~5.9.3",
     "expo-firebase-analytics": "^8.0.0",
     "expo-image-manipulator": "~11.8.0",
